# egdc-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: case_studies.py  login.py  organizations.py  references.py  search.py  seed.py  stats.py  users.py
app/core/: config.py  security.py
app/db/: init_db.py  session.py
app/db/seeds/: data.json
app/models/: case_study.py  organization.py  references.py  user.py
app/schemas/: case_study.py  facets.py  organization.py  pagination.py  references.py  stats.py  user.py
scripts/: reset_admin_password.py  test_admin_api.py  test_create.py  test_preview.py  test_search.py
static/uploads/: fd58643f-b46f-4e0c-9c35-4f03fb557cfa.xlsx
